<resources>
    <string name="app_name">Time At Work</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hours_performed">Hours performed this month</string>
    <string name="current_total">Current total:</string>
    <string name="add_btn">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="calendar">Calendar</string>
    <string name="reports">Reports</string>
    <string name="change_start_time">Change start time</string>
    <string name="end_time">End time:</string>
    <string name="change_end_time">Change end time</string>
    <string name="start_time">Start time:</string>
    <string name="encode_session">Encode session</string>
    <string name="start_session">Start session</string>
    <string name="stop_session">Stop session</string>
    <string name="notification_channel_session_description">CHANNEL_SESSION desc</string>
    <string name="notification_session_stop">Click here to stop the session</string>
    <string name="current_session">Current session</string>
    <string name="session_unterminated">Session unterminated</string>
    <string name="session_ended">Session ended successfully!</string>
    <string name="date">Date:</string>
    <string name="change_date">Change date</string>
    <string name="current_salary" >Current salary:</string>
    <string name="copy">Copy</string>
    <string name="copy_success">Copied successfully into clipboard!</string>
</resources>