<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".fragment.TimeEntryCreateFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/date"
            android:textColor="@color/color_on_primary" />

        <TextView
            android:id="@+id/create_time_entry_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/color_on_primary"
            tools:text="14/07/2021" />
    </LinearLayout>

    <Button
        android:id="@+id/create_time_entry_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_date" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/start_time"
            android:textColor="@color/color_on_primary" />

        <TextView
            android:id="@+id/create_time_entry_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/color_on_primary"
            tools:text="18h27" />
    </LinearLayout>

    <Button
        android:id="@+id/create_time_entry_start_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_start_time" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/end_time"
            android:textColor="@color/color_on_primary" />

        <TextView
            android:id="@+id/create_time_entry_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/color_on_primary"
            tools:text="00h31" />
    </LinearLayout>

    <Button
        android:id="@+id/create_time_entry_end_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_end_time" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/create_time_entry_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/create_time_entry_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>