<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".fragment.TimeEntryEditFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/start_time"
            android:textColor="@color/color_on_primary" />

        <TextView
            android:id="@+id/edit_time_entry_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/color_on_primary"
            tools:text="18h27" />

        <TextView
            android:id="@+id/edit_time_entry_forced_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/green"
            android:visibility="gone"
            tools:text="18h30" />
    </LinearLayout>

    <Button
        android:id="@+id/edit_time_entry_start_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_start_time" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/end_time"
            android:textColor="@color/color_on_primary" />

        <TextView
            android:id="@+id/edit_time_entry_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/color_on_primary"
            tools:text="00h31" />

        <TextView
            android:id="@+id/edit_time_entry_forced_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/green"
            android:visibility="gone"
            tools:text="00h30" />
    </LinearLayout>

    <Button
        android:id="@+id/edit_time_entry_end_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_end_time" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_time_entry_save_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/edit_time_entry_cancel_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/cancel" />
    </LinearLayout>

    <Button
        android:id="@+id/edit_time_entry_delete_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/delete" />

</LinearLayout>