<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@color/black"
    tools:context=".fragment.CalendarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/current_total"
                android:textColor="@color/color_on_primary" />

            <TextView
                android:id="@+id/total_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_on_primary"
                tools:text="12h24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/current_salary"
                android:textColor="@color/color_on_primary" />

            <TextView
                android:id="@+id/current_salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_on_primary"
                tools:text="152.27" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_on_primary"
                android:text="€"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <com.kizitonwose.calendarview.CalendarView
            android:id="@+id/calendarview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cv_dayViewResource="@layout/calendar_day_layout"
            app:cv_monthHeaderResource="@layout/calendar_header_layout"
            app:cv_orientation="horizontal"
            app:cv_outDateStyle="endOfGrid"
            app:cv_scrollMode="paged" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/hours_performed"
            android:textColor="@color/color_on_primary"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_times"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/time_item" />
    </LinearLayout>
</LinearLayout>