<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/footer_height"
        android:theme="@style/Theme.TimeAtWork.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp">

            <ImageView
                android:id="@+id/previous_month_image"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="22dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/previous"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_chevron_left"
                app:tint="@color/color_on_primary" />

            <TextView
                android:id="@+id/month_year_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/color_on_primary"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/next_month_image"
                app:layout_constraintStart_toEndOf="@id/previous_month_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="July 2021" />

            <ImageView
                android:id="@+id/next_month_image"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_chevron_right"
                app:tint="@color/color_on_primary" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        android:layout_marginVertical="@dimen/footer_height" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/footer_height"
            android:background="@color/primary"
            android:baselineAligned="false"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/footer_calendar_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_right"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/footer_calendar_button_iv"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_calendar_full"
                    android:layout_marginBottom="5dp"
                    app:tint="@color/color_on_primary"
                    android:contentDescription="@string/calendar" />

                <TextView
                    android:id="@+id/footer_calendar_button_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/calendar"
                    android:textColor="@color/color_on_primary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/footer_reports_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_left"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/footer_reports_button_iv"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_document"
                    android:layout_marginBottom="5dp"
                    app:tint="@color/color_on_primary_deselected"
                    android:contentDescription="@string/reports" />

                <TextView
                    android:id="@+id/footer_reports_button_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/reports"
                    android:visibility="gone"
                    android:textColor="@color/color_on_primary"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/footer_add_button"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_plus"
                app:tint="@color/color_on_primary" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/overlay_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay"
        android:elevation="10dp"
        android:gravity="center"
        android:visibility="gone">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/overlay_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>